chore: configure Python virtual environment and ignore patterns
- Add .venv/ to .gitignore to exclude virtual environment files\n- Set up isolated Python environment for development\n- Install project dependencies in virtual environment

--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,4 @@ Thumbs.db
 # Project specific
 # Add any project-specific files or directories that shouldn't be tracked
 *.mp3
-*.ogg
+*.ogg.venv/
